Refactor FrontendTypeSystem